# evraz-hack-misis-anime

./: .gitignore  .gitkeep  .pre-commit-config.yaml  README.md  arch.drawio  docker-compose.yaml  pyproject.toml
analytics/: base.py  kafka_connect.ipynb  pyproject.toml
analytics/src/evraz_anime_analytics/: helper.py  predict.py  preprocessing.py
backend/: .dockerignore  DockerfileKafka  DockerfileWeb  arch.drawio  docker-compose-local.yaml  docker-compose-only-mongo.yaml  docker-compose.yaml  pyproject.toml
backend/app/: concat_df.py  create_exhausters.py  kafka_entrypoint.py  web_entrypoint.py
backend/app/presentation/: schemas.py
backend/app/presentation/kafka/: main.py
backend/app/presentation/web/: main.py  router.py
backend/app/repository/: mongo_repository.py  pg_repository.py
backend/app/schemas/: exhauster.py  status.py
backend/app/service/: app_service.py  exhauster_service.py  mapping_service.py  stream_service.py
backend/app/shared/: containers.py  settings.py
backend/app/tests/: e2e_test.py  main.ipynb  record.py  test.py
backend/extra/: grafana.json  init.sql  mongo_init.js
backend/loadtests/: locust.conf  locustfile.py
frontend/: Dockerfile  package.json
frontend/src/: App.jsx
frontend/src/common/: backend.js  index.js  utils.js
frontend/src/components/: ExhausterSchema.jsx  Header.jsx  Sidebar.jsx  StatusBadge.jsx  index.js
frontend/src/contexts/: ContextProvider.jsx
frontend/src/pages/: Charts.jsx  ExhausterInfo.jsx  MainPage.jsx  index.js
