[tool.poetry]
name        = "evraz-anime-analytics"
version     = "0.1.0"
description = ""
authors     = ["Your Name <you@example.com>"]
packages    = [{ include = "evraz_anime_analytics",  from = "src"}]

[tool.poetry.dependencies]
python = "~3.10"
kafka-python = "^2.0.2"
pandas = "^1.5.3"
scikit-learn = "^1.2.1"
pydantic = "^1.10.5"


[tool.poetry.dev-dependencies]
mypy = "^1.0"

[tool.mypy]
python_version = "3.10"
files = "src/evraz_anime_analytics"
ignore_missing_imports = true

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
