[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["pibragimov <pibragimov@whoosh.bike>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
kafka-python = "^2.0.2"
loguru = "^0.6.0"
pydantic = {extras = ["dotenv"], version = "^1.10.5"}
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
pandas = "^1.5.3"
openpyxl = "^3.1.1"
tqdm = "^4.64.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
